# hexify-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_emscripten.yml  build_emscripten_mac.yml  build_linux.yml  build_macos.yml  build_windows.yml
src/: CMakeLists.txt
src/include/hexify/: hexify.h
src/lib/: CMakeLists.txt  hexify.c
src/tests/: CMakeLists.txt  main.c  test.c  utest.h
